Fix Java 21 compiler warnings (Thread.id deprecations) in ThreadUtils.